solve component too wide

--- a/client/src/pages/experiment.css
+++ b/client/src/pages/experiment.css
@@ -28,7 +28,8 @@
     padding: 1vw;
     align-items: center;
     justify-content: center;
-    display: flex;    
+    display: flex;
+
 }
 
 @media (max-width: 600px) {
@@ -39,6 +40,7 @@
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     
   }
   .inner-star-rating-container{
@@ -96,10 +98,8 @@
 
   @media (max-width: 600px) {
     .SubmitButton {
-      width: 100%;
+      width: auto;
       position: fixed;
-      bottom: 0;
-      left: 0;
       justify-content: center;
     }
   }
